brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__approvals_selection_popup.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 9614
expression: popup
---
  Update Model Permissions

› 1. Default      brocode can read and edit files in the current workspace,
                  and run commands. Approval is required to access the
                  internet or edit other files.
  2. Full Access  brocode can edit files outside this workspace and access the
                  internet without asking for approval. Exercise caution when
                  using.

  Press enter to confirm or esc to go back
