brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__exec_approval_history_decision_approved_short.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: lines_to_single_string(&decision)
---
✔ You approved brocode to run echo hello world this time
