brocode-rs/tui_app_server/src/chatwidget/snapshots/brocode_tui_app_server__chatwidget__tests__exec_approval_modal_exec.snap
---
source: tui_app_server/src/chatwidget/tests.rs
assertion_line: 3505
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 13 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  Would you like to run the following command?                                  ",
        "                                                                                ",
        "  Reason: this is a test reason such as one that would be produced by the       ",
        "  model                                                                         ",
        "                                                                                ",
        "  $ echo hello world                                                            ",
        "                                                                                ",
        "› 1. Yes, proceed (y)                                                           ",
        "  2. No, and tell brocode what to do differently (esc)                          ",
        "                                                                                ",
        "  Press enter to confirm or esc to cancel                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 46, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 7, fg: Rgb(137, 180, 250), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 7, fg: Rgb(205, 214, 244), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 50, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 53, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
